Ensure that dates account for timezone differences.
Datetimes coming from the database are in UTC.  When converted
directly to a date UTC dates don't match the original input date if
applying the original timezone shifts the date backwards or forwards.
This fixes the issue but assumes that the server is running in the
same timezone as the OGO database.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ dev:
   dockerfile: ./docker/Dockerfile
   volumes:
     - '.:/go/src/geodata/ogo-ical'
+    - '/etc/localtime:/etc/localtime:ro'
   hostname: ogo-ical
   ports:
     - "8081:8080"
