--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
 - chmod +x docker-compose
 - sudo mv docker-compose /usr/local/bin
 script:
-- docker-compose run dev make
+- /usr/local/bin/docker-compose run dev make
 after_success:
 - sudo chown --changes --recursive $(whoami):$(id --group $(whoami)) .
 - if [ "$TRAVIS_BRANCH" == "master" ]; then
