--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ before_install:
 - chmod +x docker-compose
 - sudo mv docker-compose /usr/local/bin
 script:
+- /usr/local/bin/docker-compose help
+- /usr/local/bin/docker-compose run dev true
 - /usr/local/bin/docker-compose run dev make
 after_success:
 - sudo chown --changes --recursive $(whoami):$(id --group $(whoami)) .
