--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,9 @@ before_install:
 - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname
   -s`-`uname -m` > docker-compose
 - chmod +x docker-compose
-- sudo mv docker-compose /usr/local/bin
+- sudo mv docker-compose /usr/local/bin/docker-compose
 script:
+- ls -l /usr/local/bin/docker-compose
 - /usr/local/bin/docker-compose help
 - /usr/local/bin/docker-compose run dev true
 - /usr/local/bin/docker-compose run dev make
